# Mini-Flota-api

./: README.md  pyproject.toml
app/: config.py  database.py  main.py  seed_user.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  driver.py  vehicles.py
app/schemas/: driver.py  paginated_response.py  vehicle.py  vehicle_query.py
app/services/: auth_service.py  driver_service.py  vehicle_service.py
tests/: test_auth.py  test_driver_service.py  test_vehicle_service.py
