[project]
name = "mini-flota-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Angela Andrango",email = "angelaandrango4@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.50.2,<0.51.0)",
    "motor (>=3.7.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)"
]
